tests/negative/neg_pr115_var_package_item.safe
package Neg_PR115_Var_Package_Item

   type Counter is range 0 to 10;

   var Value : Counter = 0;


